# knee-acoustic-emissions

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DATABASE_USAGE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  METADATA_INTEGRATION_GUIDE.md  METADATA_INTEGRATION_STRATEGY.md  PERIODIC_NOISE_INTEGRATION.md  README.md  SESSION_5_6_SUMMARY.md  TODO.md  add_instantaneous_frequency.py  ai_instructions.md  alembic.ini  audio_qc.py  biomechanics_qc.py  compute_spectrogram.py  dev-requirements.txt  dump_channels_to_csv.py  fix_test_metadata_validators.py  models.py  parse_acoustic_file_legend.py  parse_movement_cycles.py  plot_per_channel.py  process_bin_files.py  process_biomechanics.py  process_participant_directory.py  process_syncd_audio.py  pyproject.toml  pytest.ini  read_audio_board_file.m  read_audio_board_file.py  requirements.txt  run_db_tests.sh  setup.py  setup_env.ps1  setup_env.sh  sync_audio_with_biomechanics.py  (+5 more)
.claude/: settings.json  settings.local.json
.github/: CODEOWNERS  copilot-instructions.md
alembic/: README.md  env.py
alembic/versions/: a8dcba1a1181_rename_audio_sync_fields_for_consistency.py  b68cac4282f5_refactor_synchronization_fields.py  bb05b38aaebb_update_cycles_and_audio_qc_columns.py  c3f7a2b91d04_qc_pipeline_improvements.py  d4e5f6a7b8c9_add_semantic_uniqueness_constraints.py  e5f6a7b8c9d0_remove_artifact_type_add_cycle_timestamps.py  f6a7b8c9d0e1_restructure_participants_studies.py  g7b8c9d0e1f2_add_is_active_soft_delete.py
cli/: __init__.py  add_instantaneous_frequency.py  audio_qc.py  cleanup_outputs.py  cleanup_participant.py  compute_spectrogram.py  db_admin.py  dump_channels.py  dump_channels_to_csv.py  ml_knee_outcome_runner.py  ml_kneepain.py  ml_pfmkl.py  ml_tfmkl.py  ml_varusthrust.py  plot_per_channel.py  process_directory.py  read_audio.py  sync_qc.py  visualize.py
docs/: AUDIO_QC_THRESHOLD.md  BIOMECHANICS_QC.md  CYCLE_QC.md  DB_IMPLEMENTATION.md  DB_NORMALIZATION_PLAN.md  DB_NORMALIZATION_TASKS.md  DB_SCHEMA_IMPLEMENTATION.md  OOP_REFACTORING.md  POSTGRES_OPERATION.md  POSTGRES_SETUP.md  POSTGRES_TRANSITION.md  PROCESSING_LOG.md  QC_VERSIONING.md  QUICKSTART_DATABASE.md  RAW_AUDIO_QC.md  STUDY_CONFIGURATION.md  TESTING_GUIDELINES.md  TESTING_PROCESSING_LOG.md  TEST_ORGANIZATION.md  THRESHOLD_CONFIGURATION_GUIDE.md
docs/changelog/: GUIDE.md  INDEX.md  README.md  START_HERE.md
examples/: demo_knee_pain_classification.py  processing_log_example.py
scripts/: summarize_processing_logs.py  test_db_models.py  update_todo_patches.py
scripts/db_management/: clean_db.py  init_database.py  migrate_add_biomechanics_import_id.py  migrate_column_names.py  sync_production_db.py  wipe_db.py
scripts/migrations/: 001_add_biomechanics_import_id.sql
src/: __init__.py  config.py  metadata.py  metadata_old.py  metadata_session1.py  models.py  qc_versions.py
src/analysis/: __init__.py  data_loader.py  models.py  (+2 more)
tests/: conftest.py  test_aligned_stomp_logging.py  test_analysis_models.py  test_audio_qc.py  test_audio_qc_fields_persistence.py  test_audio_sheet_data_population.py  test_bin_stage_optimization.py  test_biomech_guided_stomp_detection.py  test_biomechanics_metadata_integration.py  test_biomechanics_processing_status.py  test_characteristics_importers.py  test_cleanup_outputs.py  test_cli.py  test_cli_ml_commands.py  test_cycle_details_regeneration.py  test_cycle_qc.py  test_database.py  test_dataframe_validation.py  test_detection_results_fields.py  test_energy_ratio_validation.py  test_entrypoint_processing.py  test_filtered_processing.py  test_full_pipeline_integration.py  test_instantaneous_frequency_extended.py  test_knee_level_logging.py  test_maneuver_normalization.py  test_maneuver_normalization_and_validation.py  test_metadata_integration.py  test_metadata_validators.py  test_ml_cli_helpers.py  test_movement_cycle_models.py  test_movement_cycles_boundaries.py  test_orchestration_database_persistence.py  test_parse_acoustic_file_legend.py  test_parse_movement_cycles.py  test_participant_processor.py  test_per_mic_audio_qc.py  test_persistent_processor.py  test_process_biomechanics.py  test_process_participant_directory.py  (+24 more)
(+172 files in other folders)
